[package]
name = "slack-http-client"
version = "0.1.0"
edition = "2021"
description = "A Slack HTTP client for Rust"
license = "MIT"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
